  GWEN_IDMAP itself.
- added function pr##_IdMap_FreeItems() to GWEN_IDMAP macros which e.g. 
  expands to GWEN_Buffer_IdMap_FreeItems() for
  "GWEN_IDMAP_FUNCTION_DEFS(GWEN_BUFFER, GWEN_Buffer)".
  This function frees all objects stored in the GWEN_IDMAP and clears the 
  GWEN_IDMAP (e.g. make it contain no ids afterwards).


2006-05-19   Christian Stimming <stimming@tuhh.de>

	* configure.ac: Let svn write the revision number directly into
	here on each svn update. Fixes all problems with using svninfo.


2006/05/18: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added base/idmap: This code allows for fast and efficient storage of
  pairs of [32-bit ID and a void* pointer].
  Such pairs can be set, reset and sought. This new class also allows to
  fastly iterate over the pairs.
  It allows for multiple storage algos. The first algo uses 8-step pointer
  tables of 16 entries per table.
- added typesafe macros for idmap (like those macros for GWEN_LIST2), e.g.
  "GWEN_IDMAP_FUNCTION_DEFS(GWEN_BUFFER, GWEN_Buffer)" would create an idmap
  for GWEN_BUFFER objects instead of void* pointers. So the function
  GWEN_Buffer_IdMap_GetPtr() will only work on an idmap which stores pointers
  to GWEN_BUFFERs and it returns a pointer to a GWEN_BUFFER rather than a
  void* pointer.


2006/05/17: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added storage framework (to be used by some of my developing projects)
- added first storage plugin which uses local files
  The storage framework is not yet part of the official API of Gwenhywfar,
  so API changes are likely to occurr.


2006/05/15: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- base/idlist_p.h: increased GWEN_IDTABLE_MAXENTRIES from 16 to 32


2006/05/11: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- parser/db.c: increased word buffer size