@@ -29,7 +29,7 @@ int test_register_client() {
     return 2;
   }
 
-  rv=GWEN_StoStorage_UnregisterClient(st, cl);
+  rv=GWEN_StoStorage_UnregisterClient(st, cl, 0);
   if (rv) {
     fprintf(stderr, "FAILED: Could not unregister client (%d).\n", rv);
     return 2;
@@ -71,7 +71,7 @@ int test_create_storage() {
   }
 
   fprintf(stderr, "  - unregister client\n");
-  rv=GWEN_StoStorage_UnregisterClient(st, cl);
+  rv=GWEN_StoStorage_UnregisterClient(st, cl, 0);
   if (rv) {
     fprintf(stderr, "FAILED: Could not unregister client (%d).\n", rv);
     return 2;
@@ -113,7 +113,7 @@ int test_open_storage() {
   }
 
   fprintf(stderr, "  - unregister client\n");
-  rv=GWEN_StoStorage_UnregisterClient(st, cl);
+  rv=GWEN_StoStorage_UnregisterClient(st, cl, 0);
   if (rv) {
     fprintf(stderr, "FAILED: Could not unregister client (%d).\n", rv);
     return 2;
@@ -169,7 +169,7 @@ int test_begin_edit() {
   }
 
   fprintf(stderr, "  - unregister client\n");
-  rv=GWEN_StoStorage_UnregisterClient(st, cl);
+  rv=GWEN_StoStorage_UnregisterClient(st, cl, 0);
   if (rv) {
     fprintf(stderr, "FAILED: Could not unregister client (%d).\n", rv);
     return 2;
@@ -241,7 +241,7 @@ int test_create_type() {
   }
 
   fprintf(stderr, "  - unregister client\n");
-  rv=GWEN_StoStorage_UnregisterClient(st, cl);
+  rv=GWEN_StoStorage_UnregisterClient(st, cl, 0);
   if (rv) {
     fprintf(stderr, "FAILED: Could not unregister client (%d).\n", rv);
     return 2;
@@ -300,7 +300,7 @@ int test_open_type() {
   }
 
   fprintf(stderr, "  - unregister client\n");
-  rv=GWEN_StoStorage_UnregisterClient(st, cl);
+  rv=GWEN_StoStorage_UnregisterClient(st, cl, 0);
   if (rv) {
     fprintf(stderr, "FAILED: Could not unregister client (%d).\n", rv);
     return 2;
@@ -390,7 +390,7 @@ int test_add_var() {
   }
 
   fprintf(stderr, "  - unregister client\n");
-  rv=GWEN_StoStorage_UnregisterClient(st, cl);
+  rv=GWEN_StoStorage_UnregisterClient(st, cl, 0);
   if (rv) {
     fprintf(stderr, "FAILED: Could not unregister client (%d).\n", rv);
     return 2;
@@ -481,7 +481,7 @@ int test_create_object() {
   }
 
   fprintf(stderr, "  - unregister client\n");
-  rv=GWEN_StoStorage_UnregisterClient(st, cl);
+  rv=GWEN_StoStorage_UnregisterClient(st, cl, 0);
   if (rv) {
     fprintf(stderr, "FAILED: Could not unregister client (%d).\n", rv);
     return 2;
@@ -558,7 +558,7 @@ int test_open_object() {
   }
 
   fprintf(stderr, "  - unregister client\n");
-  rv=GWEN_StoStorage_UnregisterClient(st, cl);
+  rv=GWEN_StoStorage_UnregisterClient(st, cl, 0);
   if (rv) {
     fprintf(stderr, "FAILED: Could not unregister client (%d).\n", rv);
     return 2;
@@ -659,7 +659,7 @@ int test_set_value() {
   }
 
   fprintf(stderr, "  - unregister client\n");
-  rv=GWEN_StoStorage_UnregisterClient(st, cl);
+  rv=GWEN_StoStorage_UnregisterClient(st, cl, 0);
   if (rv) {
     fprintf(stderr, "FAILED: Could not unregister client (%d).\n", rv);
     return 2;
@@ -756,7 +756,7 @@ int test_set_value2() {
   }
 
   fprintf(stderr, "  - unregister client\n");
-  rv=GWEN_StoStorage_UnregisterClient(st, cl);
+  rv=GWEN_StoStorage_UnregisterClient(st, cl, 0);
   if (rv) {
     fprintf(stderr, "FAILED: Could not unregister client (%d).\n", rv);
     return 2;
@@ -879,7 +879,7 @@ int test_set_value3() {
   }
 
   fprintf(stderr, "  - unregister client\n");
-  rv=GWEN_StoStorage_UnregisterClient(st, cl);
+  rv=GWEN_StoStorage_UnregisterClient(st, cl, 0);
   if (rv) {
     fprintf(stderr, "FAILED: Could not unregister client (%d).\n", rv);
     return 2;
@@ -978,7 +978,7 @@ int test_get_value() {
   }
 
   fprintf(stderr, "  - unregister client\n");
-  rv=GWEN_StoStorage_UnregisterClient(st, cl);
+  rv=GWEN_StoStorage_UnregisterClient(st, cl, 0);
   if (rv) {
     fprintf(stderr, "FAILED: Could not unregister client (%d).\n", rv);
     return 2;
@@ -1059,7 +1059,7 @@ int test_list_objects() {
   }
 
   fprintf(stderr, "  - unregister client\n");
-  rv=GWEN_StoStorage_UnregisterClient(st, cl);
+  rv=GWEN_StoStorage_UnregisterClient(st, cl, 0);
   if (rv) {
     fprintf(stderr, "FAILED: Could not unregister client (%d).\n", rv);
     return 2;
@@ -1161,7 +1161,7 @@ int test_create_many_objects() {
   }
 
   fprintf(stderr, "  - unregister client\n");
-  rv=GWEN_StoStorage_UnregisterClient(st, cl);
+  rv=GWEN_StoStorage_UnregisterClient(st, cl, 0);
   if (rv) {
     fprintf(stderr, "FAILED: Could not unregister client (%d).\n", rv);
     return 2;
@@ -1258,7 +1258,7 @@ int test_open_many_objects() {
   }
 
   fprintf(stderr, "  - unregister client\n");
-  rv=GWEN_StoStorage_UnregisterClient(st, cl);
+  rv=GWEN_StoStorage_UnregisterClient(st, cl, 0);
   if (rv) {
     fprintf(stderr, "FAILED: Could not unregister client (%d).\n", rv);
     return 2;
